--- a/fly.toml
+++ b/fly.toml
@@ -19,6 +19,7 @@ processes = []
   UPTOBOX_TOKEN = ""
   MAX_MESSAGE_LENGTH = 4096
   UPSTREAM_REPO = "https://github.com/missemily22/MultiFunctionBot.git"
+  DATABASE_URL = ""
   UNIFIED_EMAIL = ""
   UNIFIED_PASS = ""
   GDTOT_CRYPT = ""
