--- a/sample_config.env
+++ b/sample_config.env
@@ -11,6 +11,7 @@ SUDO_USERS = "5074446688 1691209696" # Add values seperated by space
 # Miscellaneous
 BIFM_URL = "https://bifm.tacohitbox.com/api/bypass?url"
 EMILY_API_URL = "https://api.emilyx.in/api https://emilyapi.fly.dev/api https://emily-api.fly.dev/api"  # Add values seperated by space
+DATABASE_URL = ""
 UPTOBOX_TOKEN = ""
 MAX_MESSAGE_LENGTH = 4096
 UPSTREAM_REPO = "https://github.com/missemily22/MultiFunctionBot.git"
