--- a/sample_config.env
+++ b/sample_config.env
@@ -13,6 +13,10 @@ BIFM_URL = "https://bifm.tacohitbox.com/api/bypass?url"
 EMILY_API_URL = "https://api.emilyx.in/api https://emilyapi.fly.dev/api https://emily-api.fly.dev/api"  # Add values seperated by space
 DATABASE_URL = ""
 LOG_CHANNEL = ""
+FORCESUB_ENABLE = False
+FORCESUB_CHANNEL = "-100"
+FORCESUB_CHANNEL_UNAME = "bypassbots"
+BOTOWNER_UNAME = "missemily22"
 UPTOBOX_TOKEN = ""
 MAX_MESSAGE_LENGTH = 4096
 UPSTREAM_REPO = "https://github.com/missemily22/MultiFunctionBot.git"
